<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RTU MAP APP</string>
    <string name="btn_log_without_acc">Login without account</string>
    <string name="btn_reg">Sing Up</string>
    <string name="project_name">RTU MAP APP</string>
    <string name="map">Map</string>
    <string name="places">Places</string>
    <string name="community">Community</string>
    <string name="profile">Profile</string>
    <string name="user_nickname">User nickname</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="show_on_the_map">Show on the map</string>
    <string name="input_place_name">Place name</string>
    <string name="select_on_the_map">Select on\nthe map:</string>
    <string name="place_description">Place description</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_places">All places</string>
    <string name="only_without_pictures">Only without pictures</string>
    <string name="only_with_pictures">Only with pictures</string>
    <string name="user_already_register">User already registered</string>
    <string name="login_error">Data entered incorrectly</string>
    <string name="confirm">Confirm</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="tap_to_pic_to_select_another">Tap to pic to select another</string>
    <string name="insert_username_hint">Insert user name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="login_as_guest">Login as guest</string>
    <string name="register">Register</string>
    <string name="insert_place_hint">Insert place name</string>
    <string name="please_fill_name_field">Please fill in the name field</string>
    <string name="pick_a_spot">Pick a spot on the map, please</string>
    <string name="dont_track">Don\'t keep track</string>
    <string name="user">User</string>
    <string name="add_new_place">add new place</string>
    <string name="notification_no_place">It\'s quiet for now. We are waiting for new places to be published by the authors you are subscribed to</string>
    <string name="fail_internet">\"Failed to send data. Check Internet access\"</string>
    <string name="en_notification_request">Enable notifications</string>
    <string name="en_notification_mess">To receive notifications, please enable them in your settings</string>

    <string name="track_location">To track your location in the app, please enable geocaching</string>
    <string name="please_log_in">Please log in to be able to interact with this functionality</string>
    <string name="pls_fill_name_field">Please fill in the name field</string>
    <string name="pls_fill_passwd_field">Please fill in the password field</string>
    <string name="choose_this_place">Choose this place?</string>
    <string name="place_is_delete">Place is delete</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="or">or</string>
    <string name="server_error">There was an error on the server</string>

</resources>