<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/place_Layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_bg"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clipToOutline="true"
            android:cropToPadding="true"
            android:foregroundGravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/person_filled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.488" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/user_nickname"
            android:textColor="@color/dark_brown"
            android:textSize="14sp"
            android:maxLength="32"
            android:layout_weight="1"
            app:layout_constraintStart_toEndOf="@+id/place_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="0"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:src="@drawable/delete_icon"
            android:background="@color/light_beige_main_theme"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/place_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="1dp"
        android:cropToPadding="true"
        android:foregroundGravity="center"
        android:scaleType="centerInside"
        app:layout_constraintTop_toBottomOf="@+id/user_info" />

    <TextView
        android:id="@+id/place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:maxLines="1"
        android:text="@string/loremipsum"
        android:textSize="16sp"
        android:textColor="@color/dark_brown"
        app:layout_constraintTop_toBottomOf="@+id/place_pic"/>

    <TextView
        android:id="@+id/place_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:maxLines="2"
        android:text="@string/loremipsum"
        android:textSize="12sp"
        android:textColor="@color/dark_brown"
        app:layout_constraintTop_toBottomOf="@+id/place_name"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_show_on_map"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/secondary_button"
        android:paddingHorizontal="8dp"
        android:text="@string/show_on_the_map"
        android:textAllCaps="false"
        android:textColor="@color/dark_brown"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/place_info"
        app:layout_constraintTop_toBottomOf="@+id/place_info" />

    <ImageButton
        android:id="@+id/btn_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@color/light_beige_main_theme"
        android:src="@drawable/favorite_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_show_on_map"
        app:layout_constraintTop_toBottomOf="@+id/place_info" />

    <TextView
        android:id="@+id/count_of_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loremipsum"
        android:maxLength="12"
        android:textColor="@color/dark_brown"
        app:layout_constraintEnd_toEndOf="@+id/btn_like"
        app:layout_constraintStart_toStartOf="@+id/btn_like"
        app:layout_constraintTop_toBottomOf="@+id/btn_like" />

</androidx.constraintlayout.widget.ConstraintLayout>