<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_beige_main_theme"
    tools:context=".ui.view.Fragment.CreatePlaceFragment">

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0"
        android:background="@color/light_beige_main_theme"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow_back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/place_pic"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:minHeight="120dp"
        android:maxHeight="300dp"
        android:layout_marginTop="40dp"
        android:cropToPadding="true"
        android:foregroundGravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/empty_pic"
        app:layout_constraintTop_toBottomOf="@+id/cancel_button"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_pic_to_select_another"
        android:layout_marginEnd="24dp"
        android:textColor="@color/base_brown_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_pic" />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_place_name"
        android:maxLength="20"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="48dp"
        android:textColorHint="@color/base_brown"
        app:boxStrokeColor="@color/base_log_field"
        app:boxBackgroundColor="@color/light_beige_main_theme"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="4dp"
        app:cursorColor="@color/base_brown"
        app:hintTextColor="@color/base_brown"
        app:layout_constraintTop_toBottomOf="@+id/place_pic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_brown" />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/descriptionField"-->
<!--        style="?attr/textInputFilledStyle"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:layout_marginHorizontal="48dp"-->
<!--        android:hint="@string/place_description"-->
<!--        android:maxLength="100"-->
<!--        android:textColorHint="@color/base_brown"-->
<!--        app:boxBackgroundColor="@color/light_beige_main_theme"-->
<!--        app:boxStrokeColor="@color/base_log_field"-->
<!--        app:boxStrokeWidth="2dp"-->
<!--        app:boxStrokeWidthFocused="4dp"-->
<!--        app:cursorColor="@color/base_brown"-->
<!--        app:hintTextColor="@color/base_brown"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/nameField">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/dark_brown" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->


    <LinearLayout
        android:id="@+id/mapLinearLayout"
        android:layout_width="204dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/secondary_button"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/btn_select_on_the_map"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/select_on_the_map"
            android:textColor="@color/base_brown"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/selectOnMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/select_on_the_map"
            android:scaleType="centerInside"
            android:src="@drawable/map_filled_56dp" />

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/pin_chooser"-->
<!--        android:layout_width="204dp"-->
<!--        android:layout_height="66dp"-->
<!--        android:background="@drawable/secondary_button"-->
<!--        android:orientation="horizontal"-->
<!--        android:visibility="visible"-->
<!--        android:layout_marginTop="24dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="center"-->
<!--            android:background="@drawable/btn_select_on_the_map"-->
<!--            android:gravity="center"-->
<!--            android:paddingHorizontal="10dp"-->
<!--            android:text="Select pin"-->
<!--            android:textColor="@color/base_brown"-->
<!--            android:textSize="18sp" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/choose_pin"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:contentDescription="select on map"-->
<!--            android:scaleType="centerInside"-->
<!--            android:src="@drawable/map_filled_56dp" />-->

<!--    </LinearLayout>-->

<!--    <com.google.android.material.materialswitch.MaterialSwitch-->
<!--        android:id="@+id/materialSwitch"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="56dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:textColor="@color/base_brown"-->
<!--        android:text="Show author profile"-->
<!--        app:trackTint="@color/base_brown"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"-->
<!--        app:switchPadding="16dp" />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/main_button"
        android:paddingHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/base_brown"
        app:layout_constraintEnd_toEndOf="@+id/mapLinearLayout"
        app:layout_constraintStart_toStartOf="@+id/mapLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/mapLinearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>